# adelaide

./: .gitignore  Cargo.toml  generate_impls.py  rustfmt.toml
proc/: Cargo.toml
proc/src/: lib.rs
src/: ctx.rs  file.rs  main.rs  read.rs
src/interpret/: heap.rs  internal.rs  mod.rs  thread.rs
src/lexer/: mod.rs  token.rs
src/lowering/: expr.rs  item.rs  lid.rs  mod.rs  pattern.rs  ty.rs  uses.rs
src/parser/: ast.rs  cheshire.lalrpop  mod.rs  util.rs
src/translate/: expr.rs  mod.rs  pattern.rs  ty.rs
src/typechecker/: expr.rs  facts.rs  impls.rs  instantiate.rs  item.rs  mod.rs  solve.rs  ty.rs
src/util/: error.rs  id.rs  lid.rs  mod.rs  opaque.rs  pretty.rs  try_collect.rs  zip_exact.rs
std/: any.ch  asynchronous.ch  exiting.ch  hash_map.ch  iterator.ch  list.ch  mod.ch  option.ch  stream.ch  threading.ch  timer.ch  try.ch  vector.ch
std/clib/: builtin.c  clib.c  clib.h  gc.c  internal.c  statepoint.c  statepoint.h
std/internal/: tuple_operators.ch
std/lang/: access.ch  any.ch  arithmetic.ch  asynchronous.ch  builtin.ch  call.ch  generator.ch  misc.ch  mod.ch  range.ch  try.ch  tuple_operators.ch
std/operators/: access.ch  lang.ch  mod.ch  predicate.ch  sugar.ch
test/check/: await_in_closure.ch  break_in_condition.ch  break_in_else.ch  break_label_in_async.ch  break_label_in_closure.ch  duplicated_field.ch  function_as_path.ch  illegal_allocate_struct.ch  illegal_await.ch  illegal_break.ch  illegal_construct_enum.ch  illegal_construct_generic.ch  illegal_construct_object.ch  illegal_continue.ch  illegal_return.ch  illegal_throw.ch  looping.ch  (+18 more)
(+32 files in other folders)
