[package]
name = "adelaide"
version = "0.1.0"
authors = ["Michael Goulet <michael@errs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.9.5"
salsa = "0.15.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
clap = "3.0.0-beta.1"
regex = "1.3.9"
env_logger = "0.7.1"
log = "0.4.11"
itertools = "0.9.0"
proc = { path = "proc" }