[package]
name = "adelaide"
version = "0.1.0"
authors = ["Michael Goulet <michael@errs.io>"]
edition = "2018"
exclude = ["std/*", "test/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.18"

[dependencies]
codespan-reporting = "0.9.5"
salsa = "0.15.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
clap = "3.0.0-beta.1"
regex = "1.3.9"
env_logger = "0.7.1"
log = "0.4.11"
itertools = "0.9.0"
proc = { path = "proc" }
lalrpop = "0.18"
lalrpop-util = "0.18"
either = "1.6.1"
calm_io = "0.1.1"
linked-hash-map = "0.5.3"
bumpalo = "3.4.0"